# arena-alligator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  hk.pkl  llms.txt  mise.toml
.github/workflows/: ci.yaml  release.yaml
benches/: allocator.rs
docs/: benchmarks.md  hazmat.md  numa.md
examples/: async_alloc.rs  buddy_buffer.rs  fixed_buffer.rs  hazmat_buddy_raw.rs  hazmat_fixed_raw.rs  spill_buffer.rs  treiber_waker.rs
src/: allocation.rs  arena.rs  async_alloc.rs  bitmap.rs  buddy.rs  buffer.rs  dealloc.rs  error.rs  ext.rs  geometry.rs  handle.rs  lib.rs  metrics.rs  spec.rs  sync.rs
src/hazmat/: mod.rs  raw_region.rs
tests/: from_raw.rs  hazmat_raw_access.rs  lifecycle.rs  typestate.rs
tests/compile_fail/: auto_spill_then_hazmat.rs  auto_spill_then_hazmat.stderr  buddy_auto_spill_then_hazmat.rs  buddy_auto_spill_then_hazmat.stderr  buddy_hazmat_then_auto_spill.rs  buddy_hazmat_then_auto_spill.stderr  hazmat_then_auto_spill.rs  hazmat_then_auto_spill.stderr
