[package]
name = "arena-alligator"
version = "0.4.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Lock-free arena allocator producing bytes::Bytes via from_owner"
repository = "https://github.com/tempusfrangit/arena-alligator"
documentation = "https://docs.rs/arena-alligator"

[dependencies]
bytes = "1.9"
tokio = { version = "1", features = ["sync"], optional = true }
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
loom = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[features]
default = []
async-alloc = ["dep:tokio"]

[[bench]]
name = "allocator"
harness = false

[[example]]
name = "async_alloc"
required-features = ["async-alloc"]

[package.metadata.docs.rs]
all-features = true
