[package]
name = "arena-alligator"
version = "0.6.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Arena allocator for bytes::Bytes with a fixed-slot fast path and buddy mode"
repository = "https://github.com/tempusfrangit/arena-alligator"
documentation = "https://docs.rs/arena-alligator"

[dependencies]
bytes = "1.9"
libc = { version = "0.2", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
crossbeam-epoch = "0.9.18"
loom = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
trybuild = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(feature, values("hazmat-raw-access"))'] }

[features]
default = ["libc"]
async-alloc = ["dep:tokio"]
hazmat-raw-access = []

[[bench]]
name = "allocator"
harness = false

[[example]]
name = "async_alloc"
required-features = ["async-alloc"]

[[example]]
name = "treiber_waker"
required-features = ["async-alloc"]

[package.metadata.docs.rs]
all-features = true
